[gd_scene load_steps=4 format=3 uid="uid://c0ipvky1trsib"]

[ext_resource type="Script" path="res://scenes/startbar.gd" id="1_kggbt"]
[ext_resource type="Texture2D" uid="uid://ysc77utyruna" path="res://assets/ui/Star.png" id="1_kjx1k"]
[ext_resource type="PackedScene" uid="uid://bms4qtudthq8u" path="res://scenes/starparticle.tscn" id="3_77fb2"]

[node name="startbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kggbt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 46.0
offset_top = 40.0
offset_right = 324.0
offset_bottom = 130.0

[node name="Panel" type="Panel" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Starparticle" parent="HBoxContainer/Panel" instance=ExtResource("3_77fb2")]
position = Vector2(47, 46)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -41.0
offset_right = 42.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kjx1k")

[node name="Panel2" type="Panel" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(90, 90)
layout_mode = 2

[node name="Starparticle2" parent="HBoxContainer/Panel2" instance=ExtResource("3_77fb2")]
position = Vector2(46, 38)
lifetime = 2.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Panel2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_kjx1k")

[node name="Panel3" type="Panel" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(90, 90)
layout_mode = 2

[node name="Starparticle3" parent="HBoxContainer/Panel3" instance=ExtResource("3_77fb2")]
position = Vector2(48, 41)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Panel3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_kjx1k")
